Added settings div with grid size adjustment button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Etch-A-Sketch</title>
   </head>
   <body>
+    <div id="settings-wrapper"></div>
     <div id="grid-wrapper"></div>
     <script type="module" src="/main.js"></script>
   </body>
